V2 This is much prettier

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--These act kind of like imports-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mainPage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
@@ -15,49 +16,59 @@
 </head>
 
 <body>
-    <section class="topBar">
-        <nav>
-            <div class="links">
-                <ul>
-                    <li><a href="">THE BOARD</a></li>
-                    <li><a href="./about.html">ABOUT US</a></li>
-                    <li><a href="">PROGRAMS</a></li>
-                    <li><a href="">DONATIONS</a></li>
-                    <li><a href="">RESOURCES</a></li>
-                </ul>
+    <div class="background">
+        <a href="./index.html">
+            <div class="logo">
+                Ora's Place Inc
+                <br>
+                <img src="images/StickFamily.png">
+                <br>
+                Putting lives and families back together as one
             </div>
-        </nav>
-    </section>
-    <hr>
-    <section class="mainContent">
-        <div class="logo">
-            <h3>Ora's Place Inc.</h3>
-            <img src="images/StickFamily.png">
-            <h4>Putting lives and families back together as one. </h3>
+        </a>
+
+        <div class="links">
+            <ul>
+                <li><a href="./info.html">INFORMATION</a></li>
+                <li><a href="./about.html">ABOUT US</a></li>
+                <li><a href="./programs.html">PROGRAMS</a></li>
+                <li><a href="./donations.html">DONATIONS</a></li>
+                <li><a href="./resources.html">RESOURCES</a></li>
+            </ul>
         </div>
-        <div class="missionStatement">
-            <b>Ora's Place, Inc.</b> is committed to respecting the rights of others, uplifting temperament, rebuilding
-            self-esteem, and empowerment, and putting lives, and families back together as one!<br><br>
-            <b>Ora's Place, Inc.</b> is a place where families, can enjoy the presence of temporary housing with their
-            children
-            while seeking, and awaiting permanent housing.
+        <h1 id="heading1">Nobody Should Have to Quit Their Job to Have a Home.</h1>
+        <h1 id="heading2">No Family Left Behind!</h1>
+    </div>
+    <hr class="imageBottom">
+    <div class="Board">
+        <div class="TopPart"></div>
+        <div class="text">
+            <h3 class="title"><u>THE BOARD</u><br><br>
+                • The Board is made up of individuals who have an education and background working with a
+                diverse population of homeless families, individuals, substance abuse, and other supportive services in
+                the
+                Human Service field.
+                <br><br>
+                • The Board’s vision and belief is that <i>“No family should have to choose to leave employment in
+                    order to
+                    become eligible for EA to be placed in a temporary shelter or transitional setting.”</i>
+                <br><br>
+                • The need for more shelters and transitional housing for families is even greater than before due to
+                the
+                economy, constant lay-offs, and a decrease in subsidies for housing.
+            </h3>
         </div>
-        <hr>
-        <div class="message">
-            <b>Ora’s Place, Inc.</b> is a non-profit organization with 501 (c) (3) status assisting families and
-            individuals
-            who are experiencing homelessness with supportive services.<br><br>
-            These families and individuals may or may not exceed The Department of Housing and Community Development
-            (DHCD) emergency assistance (ea) eligibility due to being over the federal poverty guidelines, of
-            200%.<br><br>
-            <b>Ora’s Place, Inc.</b> believes that no family should have to quit their employment to become eligible for
-            temporary shelter, and/or be left out without housing. <br><u>No family will be left behind!</u>
-
+        <img src="images/theBoard.jpg">
+    </div>
+    <div>
+        <h3 class="programs">OUR PROGRAMS</h3>
+        <div class="programLists">
+            <div class="program1">
+                HI
+            </div>
+            <div class="program2"></div>
+            <div class="program3">
+            </div>
         </div>
-
-    </section>
-
-
+    </div>
 </body>
-
-</html>
