--- a/programs.html
+++ b/programs.html
@@ -36,7 +36,7 @@
         </div>
     </div>
     <div class="background" , id="btmStrip">
-        <h1 id="areaHeading">ABOUT US</h1>
+        <h1 id="areaHeading">PROGRAMS</h1>
     </div>
     <hr class="imageBottom">
 </body>
