Added stuff a while ago :)

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <li><a href="./resources.html">RESOURCES</a></li>
             </ul>
         </div>
-        <h1 id="heading1">Nobody Should Have to Quit Their Job to Have a Home.</h1>
-        <h1 id="heading2">No Family Left Behind!</h1>
+        <h1 id="heading1">Ora's Place Inc</h1>
+        <h1 id="heading2">Where No Family Will Be Left Behind!</h1>
     </div>
     <hr class="imageBottom">
     <div class="Board">
@@ -60,15 +60,18 @@
         </div>
         <img src="images/theBoard.jpg">
     </div>
-    <div>
-        <h3 class="programs">OUR PROGRAMS</h3>
-        <div class="programLists">
-            <div class="program1">
-                HI
-            </div>
-            <div class="program2"></div>
-            <div class="program3">
-            </div>
+    <div class="Programs">
+        <h3>OUR PROGRAMS</h3>
+        <div class="list">
+            <a class="program" id="prog1" href="./programs.html">
+                <mark>HOUSING</mark>
+            </a>
+            <a class="program" id="prog2" href="./programs.html">
+                <mark>WORKSHOPS</mark>
+            </a>
+            <a class="program" id="prog3" href="./programs.html">
+                <mark>T.E.A.R.S Program</mark>
+            </a>
         </div>
     </div>
 </body>
