--- a/info.html
+++ b/info.html
@@ -8,9 +8,11 @@
     <!--These act kind of like imports-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="infoPage.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>></script>
     <title>Ora's Place</title>
 </head>
 
@@ -39,4 +41,13 @@
         <h1 id="areaHeading">HOMELESNESS STATISTICS</h1>
     </div>
     <hr class="imageBottom">
+    <div class="mainContent">
+        <h1 class="header" id="header1">18,471</h1>
+        <div class="bigText">People in Massachussets counted as experiencing homelessness.
+        </div>
+        <div class="smallText">Data collected from point-in-time count conductedby the HUD Continua of Care across the
+            state in January 2019.</div>
+    </div>
+    <canvas id="myChart"></canvas>
+    <script type="text/javascript" src="textDisplay.js"></script>
 </body>
